--- a/views/alunos.ejs
+++ b/views/alunos.ejs
@@ -22,7 +22,8 @@
         <nav>
             <div class="nav-wrapper #ffffff white">
                 <!-- Logo -->
-                <img class="responsive-img" src="/img/logo.png" alt="Logo da Pagina" style="width: 300px;">
+                <a href="/alunos" class="brand-logo">
+                    <img class="responsive-img" src="/img/logo.png" alt="Logo da Pagina" style="width: 300px;">
                 </a>
 
                 <!-- Ícone para abrir no Mobile -->
