--- a/views/financas.ejs
+++ b/views/financas.ejs
@@ -23,7 +23,9 @@
         <nav>
             <div class="nav-wrapper #ffffff white">
                 <!-- Logo -->
-                <img class="responsive-img" src="/img/logo.png" alt="Logo da Pagina" style="width: 300px;">
+                <a href="/" class="brand-logo">
+                    <img class="responsive-img" src="/img/logo.png" alt="Logo da Pagina" style="width: 300px;">
+                </a>
 
                 <!-- Ícone para abrir no Mobile -->
                 <a href="#" data-target="mobile-navbar" class="sidenav-trigger">
