Arrumnado as rotas

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -27,7 +27,7 @@
             </a>
             <h1>Faça seu Login</h1>
 
-            <form id="form" method="POST" action="/alunos">
+            <form id="form" method="GET" action="/alunos">
                 <div class="input-field">
                     <i class="material-icons prefix">account_circle</i>
                     <input name="email" id="email" type="email" data-error=".errorTxt1">
