--- a/views/cadastrarAlunos.ejs
+++ b/views/cadastrarAlunos.ejs
@@ -29,7 +29,7 @@
                 <h1>Cadastrar novo aluno</h1>
             </div>
             <div class="col s12 m12 l6">
-                <form class="formValidate" id="formValidate" method="POST" action="/alunos">
+                <form class="formValidate" id="formValidate" method="GET" action="/alunos">
                     <div class="input-field">
                         <i class="material-icons prefix">account_circle</i>
                         <input name="name" id="name" type="text" data-error=".errorTxt1">
