--- a/views/editarAluno.ejs
+++ b/views/editarAluno.ejs
@@ -26,7 +26,7 @@
             </div>
 
             <div class="col s12 m12 l6">
-                <form id="form" id="form" method="POST" action="/alunos">
+                <form id="form" id="form" method="GET" action="/alunos">
                     <div class="input-field">
                         <i class="material-icons prefix">account_circle</i>
                         <input name="name" id="name" type="text" data-error=".errorTxt1">
