--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -40,7 +40,7 @@
             </div>
 
             <div class="col s12 m12 l7">
-                <form id="form" method="POST" action="/alunos">
+                <form id="form" method="GET" action="/alunos">
                     <div class="input-field">
                         <i class="material-icons prefix">account_circle</i>
                         <input name="name" id="name" type="text" data-error=".errorTxt1">
