--- a/views/crie.ejs
+++ b/views/crie.ejs
@@ -14,66 +14,74 @@
 </head>
 
 <body>
-    
+
     <div class="center-align loader">
         <img src="/img/bike.svg" alt="Loader" class="responsive-img">
     </div>
     <header>
-    <div class="navbar-fixed">
-        <nav>
-            <div class="nav-wrapper #ffffff white">
-                <!-- Logo -->
-                <img class="responsive-img" src="/img/logo.png" alt="Logo da Pagina" style="width: 300px;">
+        <div class="navbar-fixed">
+            <nav>
+                <div class="nav-wrapper #ffffff white">
+                    <!-- Logo -->
+                    <a href="/home/alunos" class="brand-logo">
+                        <img class="responsive-img" src="/img/logo.png" alt="Logo da Pagina" style="width: 300px;">
+                    </a>
+
+                    <!-- Ícone para abrir no Mobile -->
+                    <a href="#" data-target="mobile-navbar" class="sidenav-trigger">
+                        <i class="material-icons black-text">menu</i>
+                    </a>
+
+                    <ul id="navbar-items" class="right hide-on-med-and-down">
+                        <li>
+                            <a class="black-text" href="#">
+                                <div class="responsive-img">
+                                    <!-- <img class="responsive-img" src=""> -->
+                                    <b><%= user.nome %></b>
+                                </div>
+                            </a>
+                        </li>
+                        <li><a href="/home/alunos" class="black-text">Alunos</a></li>
+                        <li><a href="#" class="orange-text">Crie</a></li>
+                        <li><a href="/home/financas" class="black-text">Finanças</a></li>
+                        <li><a href="/logout" class="black-text">Sair</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+
+        <!-- Menu Mobile -->
+        <ul id="mobile-navbar" class="sidenav">
+            <li>
+                <a class="black-text" href="#">
+                    <div class="responsive-img">
+                        <!-- <img class="responsive-img" src=""> -->
+                        <b><%= user.nome %></b>
+                    </div>
                 </a>
-
-                <!-- Ícone para abrir no Mobile -->
-                <a href="#" data-target="mobile-navbar" class="sidenav-trigger">
-                    <i class="material-icons black-text">menu</i>
-                </a>
-
-                <ul id="navbar-items" class="right hide-on-med-and-down">
-                    <li><a class="black-text" href="#">
-                        <div class="responsive-img">
-                          <!-- <img class="responsive-img" src=""> -->
-                          <b><%= user.nome %></b>
-                        </div>
-                      </a></li>
-                    <li><a href="/home/alunos" class="black-text">Alunos</a></li>
-                    <li><a href="#" class="orange-text">Crie</a></li>
-                    <li><a href="/home/financas" class="black-text">Finanças</a></li>
-                    <li><a href="/logout" class="black-text">Sair</a></li>
-                </ul>
-            </div>
-        </nav>
-    </div>
-
-    <!-- Menu Mobile -->
-    <ul id="mobile-navbar" class="sidenav">
-        <li><a class="black-text" href="#">
-            <div class="responsive-img">
-              <!-- <img class="responsive-img" src=""> -->
-              <b><%= user.nome %></b>
-            </div>
-          </a></li>
-        <li><a href="/home/alunos" class="black-text">Alunos</a></li>
-        <li><a href="#" class="orange-text">Crie</a></li>
-        <li><a href="/home/financas" class="black-text">Finanças</a></li>
-        <li><a href="/logout" class="black-text">Sair</a></li>
-    </ul>
+            </li>
+            <li><a href="/home/alunos" class="black-text">Alunos</a></li>
+            <li><a href="#" class="orange-text">Crie</a></li>
+            <li><a href="/home/financas" class="black-text">Finanças</a></li>
+            <li><a href="/logout" class="black-text">Sair</a></li>
+        </ul>
     </header>
     <!-- Lista dos alunos -->
     <div id="aulas">
         <div class="aulasContainer">
 
             <% for (data of datas) { %>
-            <div class="container">
-                <ul class="collapsible">
-                    <li>
-                        <div class="collapsible-header">
-                            <i class="material-icons">assignment_ind</i> <p><%= data.data_aula %></p>
-                            <span class="new badge orange" data-badge-caption="aulas"><%= data.count %></span>
-                        </div>
-                        <div class="collapsible-body"><span>
+                <div class="container">
+                    <ul class="collapsible">
+                        <li>
+                            <div class="collapsible-header">
+                                <i class="material-icons">assignment_ind</i>
+                                <p>
+                                    <%= data.data_aula %>
+                                </p>
+                                <span class="new badge orange" data-badge-caption="aulas"><%= data.count %></span>
+                            </div>
+                            <div class="collapsible-body"><span>
                             <div class="col s12 m12 l12">
                                 <table class="highlight centered table responsive-table" id="tabledata">
                                     <thead>
@@ -109,58 +117,58 @@
                                 </table>
                             </div>
                         </span>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <% } %>
+
+                    <!-- Adicionar aluno -->
+                    <div class="container " id="alunosAtivos">
+                        <div class="col s12 m4 l12 center-align">
+                            <button>Adicionar aula</button>
                         </div>
-                    </li>
-                </ul>
-            </div>
-            <% } %>
-            
-        <!-- Adicionar aluno -->
-        <div class="container " id="alunosAtivos">
-            <div class="col s12 m4 l12 center-align">
-                <button>Adicionar aula</button>
-            </div>
-        </div>
+                    </div>
 
 
 
-        <!-- FOOTER -->
-        <footer class="page-footer" id="footer">
-            <div class="container">
-                <div class="row">
-                    <div class="col l6 s12">
-                        <h5 class="white-text">HIGH PERFORMANCE</h5>
-                        <p class="white-text text-lighten-4">Monitores os seus alunos.</p>
-                    </div>
-                    <div class="col l4 offset-l2 s12">
-                        <ul>
-                            <li><a class="white-text text-lighten-3" href="/home/alunos">Alunos</a></li>
-                            <li><a class="white-text text-lighten-3" href="">Crie</a></li>
-                            <li><a class="white-text text-lighten-3" href="/home/financas">Finanças</a></li>
-                            <li><a class="white-text text-lighten-3" href="/logout">Sair</a></li>
-                        </ul>
-                    </div>
-                    <div class="col l1 s4 right">
-                        <a href="#top" class="glyphicon glyphicon-chevron-up  tooltipped" data-position="left" data-tooltip="Voltar ao topo!"><img src="/img/up.png" alt="Voltar ao topo"></a>
-                    </div>
-                </div>
-            </div>
-            <div class="footer-copyright">
-                <div class="container white-text">
-                    © 2020 High Performance Copyright
-                    <a class="white-text text-lighten-4 right" href="https://logomakr.com">Created my free logo at
+                    <!-- FOOTER -->
+                    <footer class="page-footer" id="footer">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col l6 s12">
+                                    <h5 class="white-text">HIGH PERFORMANCE</h5>
+                                    <p class="white-text text-lighten-4">Monitores os seus alunos.</p>
+                                </div>
+                                <div class="col l4 offset-l2 s12">
+                                    <ul>
+                                        <li><a class="white-text text-lighten-3" href="/home/alunos">Alunos</a></li>
+                                        <li><a class="white-text text-lighten-3" href="">Crie</a></li>
+                                        <li><a class="white-text text-lighten-3" href="/home/financas">Finanças</a></li>
+                                        <li><a class="white-text text-lighten-3" href="/logout">Sair</a></li>
+                                    </ul>
+                                </div>
+                                <div class="col l1 s4 right">
+                                    <a href="#top" class="glyphicon glyphicon-chevron-up  tooltipped" data-position="left" data-tooltip="Voltar ao topo!"><img src="/img/up.png" alt="Voltar ao topo"></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="footer-copyright">
+                            <div class="container white-text">
+                                © 2020 High Performance Copyright
+                                <a class="white-text text-lighten-4 right" href="https://logomakr.com">Created my free logo at
                     LogoMakr.com</a>
-                </div>
-            </div>
-        </footer>
+                            </div>
+                        </div>
+                    </footer>
 
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-        <script src="/js/main.js"></script>
-        <script src="/js/topo.js"></script>
-        <script src="/js/loader.js"></script>
-        <script src="/js/crie.js"></script>
+                    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+                    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+                    <script src="/js/main.js"></script>
+                    <script src="/js/topo.js"></script>
+                    <script src="/js/loader.js"></script>
+                    <script src="/js/crie.js"></script>
 </body>
 
 </html>
