--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -19,29 +19,6 @@
         <img src="/img/bike.svg" alt="Loader" class="responsive-img">
     </div>
 
-    <div class="navbar-fixed">
-        <nav>
-            <div class="nav-wrapper #ffffff white">
-                <!-- Logo -->
-                <a href="#" class="brand-logo"><img class="responsive-img" src="/img/logo.png" alt="Logo da Pagina" style="width: 300px;"></a>
-                </a>
-
-                <!-- Ícone para abrir no Mobile -->
-                <a href="#" data-target="mobile-navbar" class="sidenav-trigger">
-                    <i class="material-icons black-text">menu</i>
-                </a>
-
-                <ul id="navbar-items" class="right hide-on-med-and-down">
-                    <li><a href="/" class="black-text">Home</a></li>
-                    <li><a href="/sobre" class="black-text">Sobre</a></li>
-                    <li><a href="/login" class="black-text" aria-label="Entrar">Entrar</a></li>
-                    <li><a href="#" class="orange-text">Registrar</a></li>
-                </ul>
-
-            </div>
-        </nav>
-    </div>
-
     <!-- Menu Mobile -->
     <ul id="mobile-navbar" class="sidenav">
         <li><a href="/" class="black-text">Home</a></li>
@@ -71,40 +48,59 @@
             </div>
 
             <div class="col s12 m12 l7">
-                <form id="form" action="/cadastro" method="POST">
+                <form id="form" action="/home/alunos" method="POST">
                     <div class="input-field">
                         <i class="material-icons prefix">account_circle</i>
-                        <input id="name" type="text" name="nome" class="validate" placeholder="Nome Completo">
-                        
+                        <input name="name" id="name" type="text" data-error=".errorTxt1">
+                        <label for="name">Nome</label>
+                        <div class="errorTxt1 right-align "></div>
                     </div>
                     <div class="input-field">
                         <i class="material-icons prefix">email</i>
-                        <input id="email" type="email" name="email" class="validate", placeholder="Digite um email válido">
+                        <input name="email" id="email" type="email" data-error=".errorTxt2">
+                        <label for="email">E-mail</label>
+                        <div class="errorTxt2 right-align "></div>
                     </div>
                     <div class="input-field">
                         <i class="material-icons prefix">call</i>
-                        <input id="cel" type="number" name="celular" class="validate" placeholder="Digite seu telefone (com DDD)">
+                        <input name="cel" attrname="telephone1" type="tel" id="tel" data-error=".errorTxt3">
+                        <label for="tel">Celular</label>
+                        <div class="errorTxt3 right-align "></div>
                     </div>
                     <div class="input-field">
                         <i class="material-icons prefix">lock_outline</i>
-                        <input id="password" type="password" name="senha" class="validate" placeholder="Digite uma senha">
+                        <input name="senha" id="password" type="password" data-error=".errorTxt4">
+                        <label for="password">Senha</label>
+                        <div class="errorTxt4 right-align "></div>
                     </div>
                     <div class="input-field">
                         <i class="material-icons prefix">lock_outline</i>
-                        <input id="passwordAgain" type="password" name="repSenha" class="validate" placeholder="Repita a senha">
+                        <input name="senha2" id="passwordAgain" type="password" data-error=".errorTxt5">
+                        <label for="passwordAgain"> Repetir Senha</label>
+                        <div class="errorTxt5 right-align "></div>
                     </div>
                     <div class="input-field">
-
-                            <button type="submit" class="btn waves-effect waves-light" type="submit">
-                                <i class="material-icons">lock_open</i> CADASTRAR
-                            </button>
+                        <button class="btn waves-effect waves-light right submit" type="submit" name="action">Cadastrar</button>
                     </div>
                 </form>
             </div>
         </div>
     </div>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="/js/loader.js"></script>
+
+    <!-- Validar form -->
+    <script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.15.0/jquery.validate.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.1/dist/additional-methods.min.js"></script>
+    <script src="/js/messages_pt_BR.js"></script>
+    <script src="/js/formCadastro.js"></script>
+
+    <!-- Mascarar telefone -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-masker/1.1.0/vanilla-masker.min.js"></script>
+    <script src="/js/maskTel.js"></script>
 </body>
 
 </html>
