--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,41 +15,10 @@
 </head>
 
 <body>
-    <header>
     <div class="center-align loader">
         <img src="/img/bike.svg" alt="Loader" class="responsive-img">
     </div>
-    <div class="navbar-fixed">
-        <nav>
-            <div class="nav-wrapper #ffffff white">
-                <!-- Logo -->
-                <a href="#" class="brand-logo"><img class="responsive-img" src="/img/logo.png" alt="Logo da Pagina" style="width: 300px;"></a>
-                </a>
 
-                <!-- Ícone para abrir no Mobile -->
-                <a href="#" data-target="mobile-navbar" class="sidenav-trigger">
-                    <i class="material-icons black-text">menu</i>
-                </a>
-
-                <ul id="navbar-items" class="right hide-on-med-and-down">
-                    <li><a href="/" class="black-text">Home</a></li>
-                    <li><a href="/sobre" class="black-text">Sobre</a></li>
-                    <li><a href="#" class="orange-text" aria-label="Entrar">Entrar</a></li>
-                    <li><a href="/cadastro" class="black-text">Registrar</a></li>
-                </ul>
-
-            </div>
-        </nav>
-    </div>
-
-    <!-- Menu Mobile -->
-    <ul id="mobile-navbar" class="sidenav">
-        <li><a href="/" class="black-text">Home</a></li>
-        <li><a href="/sobre" class="black-text">Sobre</a></li>
-        <li><a href="#" class="orange-text">Entrar</a></li>
-        <li><a href="/cadastro" class="black-text">Registrar</a></li>
-    </ul>
-    </header>
     <div class="row">
 
         <div class="col s12 m11 l5" id="login">
@@ -58,16 +27,18 @@
             </a>
             <h1>Faça seu Login</h1>
 
-            <form id="form" action="/login" method="POST">
+            <form id="form" action="/home" method="GET">
                 <div class="input-field">
                     <i class="material-icons prefix">account_circle</i>
-                    <input id="email" type="email" name="email" class="validate" placeholder="Digite seu email">
-            
+                    <input name="email" id="email" type="email" data-error=".errorTxt1">
+                    <label for="icon_prefix">E-mail</label>
+                    <div class="errorTxt1 right-align"></div>
                 </div>
                 <div class="input-field">
                     <i class="material-icons prefix">lock_outline</i>
-                    <input id="senha" type="password" name="senha" class="validate" placeholder="Digite sua senha">
-                    
+                    <input name="senha" id="senha" type="password" data-error=".errorTxt2">
+                    <label for="senha">Senha</label>
+                    <div class="errorTxt2 right-align"></div>
                 </div>
                 <div class="input-field">
                     <button id="btn" class="btn waves-effect waves-light right submit" type="submit" name="action">Entrar</button>
@@ -89,7 +60,14 @@
         </div>
     </div>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="/js/loader.js"></script>
+
+    <!-- Validar form -->
+    <script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.15.0/jquery.validate.min.js"></script>
+    <script src="/js/messages_pt_BR.js"></script>
+    <script src="/js/formLogin.js"></script>
 </body>
 
 </html>
