--- a/views/treino.ejs
+++ b/views/treino.ejs
@@ -23,7 +23,8 @@
         <nav>
             <div class="nav-wrapper #ffffff white">
                 <!-- Logo -->
-                <img class="responsive-img" src="/img/logo.png" alt="Logo da Pagina" style="width: 300px;">
+                <a href="/home/alunos" class="brand-logo">
+                    <img class="responsive-img" src="/img/logo.png" alt="Logo da Pagina" style="width: 300px;">
                 </a>
 
                 <!-- Ícone para abrir no Mobile -->
@@ -32,12 +33,14 @@
                 </a>
 
                 <ul id="navbar-items" class="right hide-on-med-and-down">
-                    <li><a class="black-text" href="#">
-                        <div class="responsive-img">
-                          <!-- <img class="responsive-img" src=""> -->
-                          <b><%= user.nome %></b>
-                        </div>
-                      </a></li>
+                    <li>
+                        <a class="black-text" href="#">
+                            <div class="responsive-img">
+                                <!-- <img class="responsive-img" src=""> -->
+                                <b><%= user.nome %></b>
+                            </div>
+                        </a>
+                    </li>
                     <li><a href="/home/alunos" class="orange-text">Alunos</a></li>
                     <li><a href="/home" class="black-text">Crie</a></li>
                     <li><a href="/home/financas" class="black-text">Finanças</a></li>
@@ -49,12 +52,14 @@
 
     <!-- Menu Mobile -->
     <ul id="mobile-navbar" class="sidenav">
-        <li><a class="black-text" href="#">
-            <div class="responsive-img">
-              <!-- <img class="responsive-img" src=""> -->
-              <b><%= user.nome %></b>
-            </div>
-          </a></li>
+        <li>
+            <a class="black-text" href="#">
+                <div class="responsive-img">
+                    <!-- <img class="responsive-img" src=""> -->
+                    <b><%= user.nome %></b>
+                </div>
+            </a>
+        </li>
         <li><a href="/home/alunos" class="orange-text">Alunos</a></li>
         <li><a href="/home" class="black-text">Crie</a></li>
         <li><a href="/home/financas" class="black-text">Finanças</a></li>
@@ -122,19 +127,6 @@
             </div>
         </div>
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
 
     <!-- FOOTER -->
     <footer class="page-footer" id="footer">
