--- a/views/cadastrarAlunos.ejs
+++ b/views/cadastrarAlunos.ejs
@@ -6,10 +6,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Site voltado para educadores físicos gerenciar dados do alunos que utilizam o aplicativo Strava. Conseguingo assim, organizar suas finanças, agendas, monitoramento dos alunos e outros.">
-    <link rel="shortcut icon" href="/img/Iconlogo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../../img/Iconlogo.png" type="image/x-icon">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="/css/cadastroAlunos.css">
+    <link rel="stylesheet" href="cadastroAlunos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel=”canonical” href="https://highperformance.herokuapp.com/pages/cadastro/cadastro.html" />
 </head>
@@ -17,19 +17,19 @@
 <body>
 
     <div class="center-align loader">
-        <img src="/img/bike.svg" alt="Loader" class="responsive-img">
+        <img src="../../img/bike.svg" alt="Loader" class="responsive-img">
     </div>
 
     <div class="cadastro">
         <div class="row">
             <div class="col s12 m12 l6 center-align" id="cadastroContainer">
-                <a href="/alunos">
-                    <img class="responsive-img logo" src="/img/icon512.png" alt="High Performance">
+                <a href="../alunos/alunos.html">
+                    <img class="responsive-img logo" src="../../img/icon512.png" alt="High Performance">
                 </a>
                 <h1>Cadastrar novo aluno</h1>
             </div>
             <div class="col s12 m12 l6">
-                <form class="formValidate" id="formValidate" method="GET" action="/alunos">
+                <form class="formValidate" id="formValidate" method="POST" action="../alunos/alunos.html">
                     <div class="input-field">
                         <i class="material-icons prefix">account_circle</i>
                         <input name="name" id="name" type="text" data-error=".errorTxt1">
@@ -66,17 +66,17 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="/js/loader.js"></script>
+    <script src="../../js/loader.js"></script>
 
     <!-- Validar form -->
     <script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.15.0/jquery.validate.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.1/dist/additional-methods.min.js"></script>
-    <script src="/js/messages_pt_BR.js"></script>
-    <script src="/js/formCadastroAluno.js"></script>
+    <script src="../../js/messages_pt_BR.js"></script>
+    <script src="../../js/formCadastroAluno.js"></script>
 
     <!-- Mascarar telefone -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-masker/1.1.0/vanilla-masker.min.js"></script>
-    <script src="/js/maskTel.js"></script>
+    <script src="../../js/maskTel.js"></script>
 </body>
 
 </html>
