--- a/views/editarAluno.ejs
+++ b/views/editarAluno.ejs
@@ -6,68 +6,69 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Site voltado para educadores físicos gerenciar dados do alunos que utilizam o aplicativo Strava. Conseguingo assim, organizar suas finanças, agendas, monitoramento dos alunos e outros.">
-    <link rel="shortcut icon" href="/img/Iconlogo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../../img/Iconlogo.png" type="image/x-icon">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="/css/editarAluno.css">
+    <link rel="stylesheet" href="../EditarAluno/editarAluno.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel=”canonical” href="https://highperformance.herokuapp.com/pages/cadastro/cadastro.html" />
 </head>
 
 <body>
     <div class="center-align loader">
-        <img src="/img/bike.svg" alt="Loader" class="responsive-img">
+        <img src="../../img/bike.svg" alt="Loader" class="responsive-img">
     </div>
 
     <div class="aluno">
         <div class="container" id="aluno">
             <div class="col s12 m12 l12 center-align">
-                <img src="/img/avatar.png" alt="avatar do aluno" class="responsive-img">
+                <img src="../../img/avatar.png" alt="avatar do aluno" class="responsive-img">
             </div>
 
             <div class="col s12 m12 l6">
-                <form id="form" id="form" method="GET" action="/alunos">
-                    <div class="input-field">
-                        <i class="material-icons prefix">account_circle</i>
-                        <input name="name" id="name" type="text" data-error=".errorTxt1">
-                        <label for="name">Nome</label>
-                        <div class="errorTxt1 right-align"></div>
-                    </div>
-                    <div class="input-field">
-                        <i class="material-icons prefix">email</i>
-                        <input name="email" id="email" type="email" data-error=".errorTxt2">
-                        <label for="email">E-mail</label>
-                        <div class="errorTxt2 right-align"></div>
-                    </div>
-                    <div class="input-field">
-                        <i class="material-icons prefix">call</i>
-                        <input name="cel" attrname="telephone1" type="tel" id="tel" data-error=".errorTxt3">
-                        <label for="cel">Celular</label>
-                        <div class="errorTxt3 right-align"></div>
-                    </div>
-                    <div class="input-field">
-                        <i class="material-icons prefix">date_range</i>
-                        <input name="date" id="date" type="date" class="form-control" data-error=".errorTxt4">
-                        <label for="password">Data Nasc.</label>
-                        <div class="errorTxt4 right-align"></div>
-                    </div>
-                    <div class="row">
-                        <div class="col s12 m6 l6">
-                            <div class="input-field">
-                                <a href="/alunos">
-                                    <span class="btn waves-effect waves-light">
-                                 Cancelar
-                                </span>
-                                </a>
+                <form id="form" id="form" method="POST" action="../alunos/alunos.html">
+                    <form id="form" id="form" method="GET" action="/alunos">
+                        <div class="input-field">
+                            <i class="material-icons prefix">account_circle</i>
+                            <input name="name" id="name" type="text" data-error=".errorTxt1">
+                            <label for="name">Nome</label>
+                            <div class="errorTxt1 right-align"></div>
+                        </div>
+                        <div class="input-field">
+                            <i class="material-icons prefix">email</i>
+                            <input name="email" id="email" type="email" data-error=".errorTxt2">
+                            <label for="email">E-mail</label>
+                            <div class="errorTxt2 right-align"></div>
+                        </div>
+                        <div class="input-field">
+                            <i class="material-icons prefix">call</i>
+                            <input name="cel" attrname="telephone1" type="tel" id="tel" data-error=".errorTxt3">
+                            <label for="cel">Celular</label>
+                            <div class="errorTxt3 right-align"></div>
+                        </div>
+                        <div class="input-field">
+                            <i class="material-icons prefix">date_range</i>
+                            <input name="date" id="date" type="date" class="form-control" data-error=".errorTxt4">
+                            <label for="password">Data Nasc.</label>
+                            <div class="errorTxt4 right-align"></div>
+                        </div>
+                        <div class="row">
+                            <div class="col s12 m6 l6">
+                                <div class="input-field">
+                                    <a href="/alunos">
+                                        <span class="btn waves-effect waves-light">
+                                     Cancelar
+                                    </span>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col s12 m6 l6">
+                                <div class="input-field">
+                                    <button id="btn" class="btn waves-effect waves-light right submit" type="submit" name="action">Entrar</button>
+                                </div>
                             </div>
                         </div>
-                        <div class="col s12 m6 l6">
-                            <div class="input-field">
-                                <button id="btn" class="btn waves-effect waves-light right submit" type="submit" name="action">Entrar</button>
-                            </div>
-                        </div>
-                    </div>
-                </form>
+                    </form>
             </div>
         </div>
     </div>
@@ -76,17 +77,17 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="/js/loader.js"></script>
+    <script src="../../js/loader.js"></script>
 
     <!-- Validar form -->
     <script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.15.0/jquery.validate.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.1/dist/additional-methods.min.js"></script>
-    <script src="/js/messages_pt_BR.js"></script>
-    <script src="/js/formEditarAluno.js"></script>
+    <script src="../../js/messages_pt_BR.js"></script>
+    <script src="../../js/formEditarAluno.js"></script>
 
     <!-- Mascarar telefone -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-masker/1.1.0/vanilla-masker.min.js"></script>
-    <script src="/js/maskTel.js"></script>
+    <script src="../../js/maskTel.js"></script>
 </body>
 
 </html>
