--- a/views/financas.ejs
+++ b/views/financas.ejs
@@ -23,7 +23,7 @@
         <nav>
             <div class="nav-wrapper #ffffff white">
                 <!-- Logo -->
-                <a href="/" class="brand-logo">
+                <a href="/home/alunos" class="brand-logo">
                     <img class="responsive-img" src="/img/logo.png" alt="Logo da Pagina" style="width: 300px;">
                 </a>
 
@@ -33,10 +33,18 @@
                 </a>
 
                 <ul id="navbar-items" class="right hide-on-med-and-down">
-                    <li><a href="/alunos" class="black-text">Alunos</a></li>
-                    <li><a href="/crie" class="black-text">Crie</a></li>
-                    <li><a href="/financas" class="orange-text">Finanças</a></li>
-                    <li><a href="/" class="black-text">Sair</a></li>
+                    <li>
+                        <a class="black-text" href="#">
+                            <div class="responsive-img">
+                                <!-- <img class="responsive-img" src=""> -->
+                                <b><%= user.nome %></b>
+                            </div>
+                        </a>
+                    </li>
+                    <li><a href="/home/alunos" class="black-text">Alunos</a></li>
+                    <li><a href="/home" class="black-text">Crie</a></li>
+                    <li><a href="/home/financas" class="orange-text">Finanças</a></li>
+                    <li><a href="/logout" class="black-text">Sair</a></li>
                 </ul>
             </div>
         </nav>
@@ -44,10 +52,18 @@
 
     <!-- Menu Mobile -->
     <ul id="mobile-navbar" class="sidenav">
-        <li><a href="/alunos" class="black-text">Alunos</a></li>
-        <li><a href="/crie" class="black-text">Crie</a></li>
-        <li><a href="/financas" class="orange-text">Finanças</a></li>
-        <li><a href="/" class="black-text">Sair</a></li>
+        <li>
+            <a class="black-text" href="#">
+                <div class="responsive-img">
+                    <!-- <img class="responsive-img" src=""> -->
+                    <b><%= user.nome %></b>
+                </div>
+            </a>
+        </li>
+        <li><a href="/home/alunos" class="black-text">Alunos</a></li>
+        <li><a href="/home" class="black-text">Crie</a></li>
+        <li><a href="/home/financas" class="orange-text">Finanças</a></li>
+        <li><a href="/logout" class="black-text">Sair</a></li>
     </ul>
 
 
@@ -147,10 +163,10 @@
                 </div>
                 <div class="col l4 offset-l2 s12">
                     <ul>
-                        <li><a class="white-text text-lighten-3" href="/alunos">Alunos</a></li>
-                        <li><a class="white-text text-lighten-3" href="/crie">Crie</a></li>
-                        <li><a class="white-text text-lighten-3" href="/financas">Finanças</a></li>
-                        <li><a class="white-text text-lighten-3" href="/">Sair</a></li>
+                        <li><a class="white-text text-lighten-3" href="/home/alunos">Alunos</a></li>
+                        <li><a class="white-text text-lighten-3" href="/home">Crie</a></li>
+                        <li><a class="white-text text-lighten-3" href="/home/financas">Finanças</a></li>
+                        <li><a class="white-text text-lighten-3" href="/logout">Sair</a></li>
                     </ul>
                 </div>
                 <div class="col l1 s4 right">
