--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,17 +2,18 @@
 <html lang="pt-br">
 
 <head>
-    <title>HIGH PERFORMANCE</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Site voltado para educadores físicos gerenciar dados do alunos que utilizam o aplicativo Strava. Conseguingo assim, organizar suas finanças, agendas, monitoramento dos alunos e outros.">
+    <meta name="theme-color" content="#ffffff">
     <link rel="shortcut icon" href="/img/Iconlogo.png" type="image/x-icon">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>HIGH PERFORMANCE</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="/css/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
+    <link rel="apple-touch-icon" href="/img/icon-192x192.png">
     <link rel=”canonical” href="https://highperformance.herokuapp.com" />
     <link rel="manifest" href="/js/pwa.webmanifest">
 </head>
@@ -26,8 +27,7 @@
         <nav>
             <div class="nav-wrapper #ffffff white">
                 <!-- Logo -->
-                <a href="/" class="brand-logo">
-                    <img class="responsive-img" src="/img/logo.png" alt="Logo da Pagina" style="width: 300px;">
+                <a href="#" class="brand-logo"><img class="responsive-img" src="/img/logo.png" alt="Logo da Pagina" style="width: 300px;"></a>
                 </a>
 
                 <!-- Ícone para abrir no Mobile -->
@@ -51,7 +51,7 @@
         <li><a href="/" class="orange-text">Home</a></li>
         <li><a href="/sobre" class="black-text">Sobre</a></li>
         <li><a href="/login" class="black-text">Entrar</a></li>
-        <li><a href="/cadastro.html" class="black-text">Registrar</a></li>
+        <li><a href="/cadastro" class="black-text">Registrar</a></li>
     </ul>
 
     <!-- BANNER -->
@@ -63,7 +63,7 @@
             <h1 class="right-align">MONITORE <br> SEUS ALUNOS</h1>
             <p class="right-align">O site High Performance é voltado para educadores físicos que desejam gerenciar dados do alunos que usam o aplicativo de monitoramento Strava. Conseguingo assim, organizar suas finanças, agendas, monitoramento dos alunos e outros benefícios.
             </p>
-            <a href="/sobre">Saber mais</a>
+            <a href="./pages/sobre/sobre.html">Saber mais</a>
         </div>
     </div>
 
@@ -139,7 +139,7 @@
             <div class="square center-align">
                 <h6>COMECE <span>AGORA</span> A USAR<br> O <span>HIGH PERFORMANCE</span></h6>
             </div>
-            <a href="/cadastro">Registre-se</a>
+            <a href="./pages/cadastro/cadastro.html">Cadastre-se</a>
         </div>
 
         <div class="col s12 m12 l7 left-align">
@@ -153,6 +153,7 @@
             <h2>DEPOIMENTOS</h2>
         </div>
     </div>
+
     <div class="carousel" id="carrossel">
         <a class="carousel-item center-align" href="#one!">
             <section>
@@ -211,10 +212,10 @@
                 </div>
                 <div class="col l4 offset-l2 s12">
                     <ul>
-                        <li><a class="white-text text-lighten-3" href="/">Home</a></li>
-                        <li><a class="white-text text-lighten-3" href="/sobre">Sobre</a></li>
-                        <li><a class="white-text text-lighten-3" href="/login" aria-label="Entrar">Entrar</li>
-                        <li><a class="white-text text-lighten-3" href="/cadastro">Registrar</a></li>
+                        <li><a class="white-text text-lighten-3" href="#">Home</a></li>
+                        <li><a class="white-text text-lighten-3" href="../pages/sobre/sobre.html">Sobre</a></li>
+                        <li><a class="white-text text-lighten-3" href="../pages/entrar/login.html" aria-label="Entrar">Entrar</li>
+                        <li><a class="white-text text-lighten-3" href="../pages/cadastro/cadastro.html">Registrar</a></li>
                     </ul>
                 </div>
                 <div class="col l1 s4 right">
