--- a/views/sobre.ejs
+++ b/views/sobre.ejs
@@ -33,7 +33,7 @@
 
                 <ul id="navbar-items" class="right hide-on-med-and-down">
                     <li><a href="/" class="black-text">Home</a></li>
-                    <li><a href="/sobre" class="orange-text">Sobre</a></li>
+                    <li><a href="#" class="orange-text">Sobre</a></li>
                     <li><a href="/login" class="black-text">Entrar</a></li>
                     <li><a href="/cadastro" class="black-text">Registrar</a></li>
                 </ul>
@@ -44,7 +44,7 @@
     <!-- Menu Mobile -->
     <ul id="mobile-navbar" class="sidenav">
         <li><a href="/">Início</a></li>
-        <li><a href="/sobre" class="orange-text">Sobre</a></li>
+        <li><a href="#" class="orange-text">Sobre</a></li>
         <li><a href="/login" class="black-text" aria-label="Entrar">Entrar</a></li>
         <li><a href="/cadastro" class="black-text">Registrar</a></li>
     </ul>
@@ -54,8 +54,8 @@
     <div id="sobre">
         <div class="row">
             <div class="col s12 m12 l6">
-                <p>Com o <span>High Performance</span> você pode monitorar todos os dados do seus alunos que estão utilizando o aplicativo <img src="../../img/strava.png" alt="">, marcar aulas, ter um gestão dos seus pagamentos, lista de presença, entre
-                    outros. Tudo isso apenas em um só lugar.
+                <p>Com o <span>High Performance</span> você pode monitorar todos os dados do seus alunos que estão utilizando o aplicativo <img src="/img/strava.png" alt="">, marcar aulas, ter um gestão dos seus pagamentos, lista de presença, entre outros.
+                    Tudo isso apenas em um só lugar.
                 </p>
             </div>
             <div class="col s12 m12 l6" id="ilustracao">
@@ -111,7 +111,6 @@
                     </clipPath>
                     </defs>
                     </svg>
-
             </div>
         </div>
     </div>
@@ -126,171 +125,58 @@
     <div id="time">
         <div class="row ">
             <div class="container">
-                <div class="col s12 m6 l6">
-                    <div id="profile-card" class="card">
-                        <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="/img/8.png" alt="user bg">
-                        </div>
-                        <div class="card-content">
-                            <img src="./img/diogo.png" alt="Diogo" class="circle responsive-img activator card-profile-image cyan lighten-1 padding-2">
-                            <a class="btn-floating activator btn-move-up waves-effect waves-light red accent-2 z-depth-4 right">
-                                <i class="material-icons">add</i>
-                            </a>
-                            <span class="card-title activator grey-text text-darken-4">Diogo</span>
-                            <p>
-                                <i class="material-icons">perm_identity</i>Desenvolvedor</p>
-                            <p>
-                                <i class="material-icons">code</i><a href="https://github.com/Dogix11" class="black-text" target="_blank" rel="noopener">GitHub: Dogix11</a></p>
-                            <p>
-                                <i class="material-icons">email</i> <a href="mailto:diogofcar@gmail.com?Subject=Contato%20High%20Performance" class="black-text">diogofcar@gmail.com</a> </p>
-                        </div>
-                        <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">Diogo
-                                <i class="material-icons right">close</i>
-                            </span>
-                            <p>Mais informações.</p>
-                            <p>
-                                <i class="material-icons">perm_identity</i>Desenvolvedor</p>
-                            <p>
-                                <i class="material-icons">code</i><a href="https://github.com/Dogix11" class="black-text" target="_blank" rel="noopener">GitHub: Dogix11</a></p>
-                            <p>
-                                <i class="material-icons">email</i><a href="mailto:diogofcar@gmail.com?Subject=Contato%20High%20Performance" class="black-text">diogofcar@gmail.com</a>
-                            </p>
-                            <p>
-                            </p>
-                            <p>
-                                <i class="material-icons">airplanemode_active</i> Brasil
-                            </p>
-                            <p>
-                            </p>
-                        </div>
-                    </div>
-                </div>
 
-                <div class="col s12 m6 l6">
-                    <div id="profile-card2" class="card">
-                        <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="/img/8.png" alt="user bg">
-                        </div>
-                        <div class="card-content">
-                            <img src="/img/paulo.png" alt="Paulo" class="circle responsive-img activator card-profile-image cyan lighten-1 padding-2">
-                            <a class="btn-floating activator btn-move-up waves-effect waves-light red accent-2 z-depth-4 right">
-                                <i class="material-icons">add</i>
-                            </a>
-                            <span class="card-title activator grey-text text-darken-4">Paulo Ernesto</span>
-                            <p>
-                                <i class="material-icons">perm_identity</i>Desenvolvedor</p>
-                            <p>
-                                <i class="material-icons">code</i><a href="https://github.com/pauloernestom" class="black-text" target="_blank" rel="noopener">GitHub: pauloernestom</a></p>
-                            <p>
-                                <i class="material-icons">email</i><a href="mailto:pauloernestom@gmail.com?Subject=Contato%20High%20Performance" class="black-text">pauloernestom@gmail.com</p>
-                        </div>
-                        <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">Paulo Ernesto
+                <% for (membro of equipe) { %>
+                    <div class="col s12 m6 l6">
+                        <div id="profile-card" class="card">
+                            <div class="card-image waves-effect waves-block waves-light">
+                                <img class="activator" src="/img/8.png" alt="user bg">
+                            </div>
+                            <div class="card-content">
+                                <img src="<%= membro.img %>" alt="membro" class="circle responsive-img activator card-profile-image cyan lighten-1 padding-2">
+                                <a class="btn-floating activator btn-move-up waves-effect waves-light red accent-2 z-depth-4 right">
+                                    <i class="material-icons">add</i>
+                                </a>
+                                <span class="card-title activator grey-text text-darken-4"><%= membro.nome %></span>
+                                <p>
+                                    <i class="material-icons">perm_identity</i>
+                                    <%= membro.funcao %>
+                                </p>
+                                <p>
+                                    <i class="material-icons">code</i><a href="<%= membro.site %>" class="black-text" target="_blank" rel="noopener">GitHub</a></p>
+                                <p>
+                                    <i class="material-icons">email</i>
+                                    <%= membro.email %>
+                                </p>
+                            </div>
+                            <div class="card-reveal">
+                                <span class="card-title grey-text text-darken-4"><%= membro.nome %>
                                 <i class="material-icons right">close</i>
                             </span>
-                            <p>Mais informações.</p>
-                            <p>
-                                <i class="material-icons">perm_identity</i>Desenvolvedor</p>
-                            <p>
-                                <i class="material-icons">code</i><a href="https://github.com/pauloernestom" class="black-text" target="_blank" rel="noopener">GitHub: pauloernestom</a></p>
-                            <p>
-                                <i class="material-icons">email</i> <a href="mailto:pauloernestom@gmail.com?Subject=Contato%20High%20Performance" class="black-text">pauloernestom@gmail.com</a>
-                            </p>
-                            <p>
-                            </p>
-                            <p>
-                                <i class="material-icons">airplanemode_active</i> Brasil
-                            </p>
-                            <p>
-                            </p>
+                                <p>Mais informações.</p>
+                                <p>
+                                    <i class="material-icons">perm_identity</i>
+                                    <%= membro.funcao %>
+                                </p>
+                                <p>
+                                    <i class="material-icons">code</i><a href="<%= membro.site %>" class="black-text" target="_blank" rel="noopener">GitHub</a></p>
+                                <p>
+                                    <i class="material-icons">email</i>
+                                    <%= membro.email %>
+                                </p>
+                                <p>
+                                </p>
+                                <p>
+                                    <i class="material-icons">airplanemode_active</i>
+                                    <%= membro.location %>
+                                </p>
+                                <p>
+                                </p>
+                            </div>
                         </div>
                     </div>
-                </div>
 
-                <div class="col s12 m6 l6">
-                    <div id="profile-card3" class="card">
-                        <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="/img/8.png" alt="user bg">
-                        </div>
-                        <div class="card-content">
-                            <img src="/img/rafael.jpg" alt="Rafael" class="circle responsive-img activator card-profile-image cyan lighten-1 padding-2">
-                            <a class="btn-floating activator btn-move-up waves-effect waves-light red accent-2 z-depth-4 right">
-                                <i class="material-icons">add</i>
-                            </a>
-                            <span class="card-title activator grey-text text-darken-4">Rafael Santana</span>
-                            <p>
-                                <i class="material-icons">perm_identity</i>Desenvolvedor</p>
-                            <p>
-                                <i class="material-icons">code</i><a href="https://github.com/rafalmeida73" class="black-text" target="_blank" rel="noopener">GitHub: rafalmeida73</a></p>
-                            <p>
-                                <i class="material-icons">email</i> <a href="mailto:rafaelsantana7213@gmail.com?Subject=Contato%20High%20Performance" class="black-text">rafaelsantana7213@gmail.com</a>
-                            </p>
-                        </div>
-                        <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">Rafael Santana
-                                <i class="material-icons right">close</i>
-                            </span>
-                            <p>Mais informações.</p>
-                            <p>
-                                <i class="material-icons">perm_identity</i>Desenvolvedor</p>
-                            <p>
-                                <i class="material-icons">code</i><a href="https://github.com/rafalmeida73" class="black-text" target="_blank" rel="noopener">GitHub: rafalmeida73</a></p>
-                            <p>
-                                <i class="material-icons">email</i> <a href="mailto:rafaelsantana7213@gmail.com?Subject=Contato%20High%20Performance" class="black-text">rafaelsantana7213@gmail.com</a>
-                            </p>
-                            <p>
-                            </p>
-                            <p>
-                                <i class="material-icons">airplanemode_active</i> Brasil
-                            </p>
-                            <p>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col s12 m6 l6">
-                    <div id="profile-card4" class="card">
-                        <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="/img/8.png" alt="user bg">
-                        </div>
-                        <div class="card-content">
-                            <img src="/img/roni.png" alt="Roni" class="circle responsive-img activator card-profile-image cyan lighten-1 padding-2">
-                            <a class="btn-floating activator btn-move-up waves-effect waves-light red accent-2 z-depth-4 right">
-                                <i class="material-icons">add</i>
-                            </a>
-                            <span class="card-title activator grey-text text-darken-4">Rony Cleber</span>
-                            <p>
-                                <i class="material-icons">perm_identity</i>Scrum Master</p>
-                            <p>
-                                <i class="material-icons">code</i><a href="https://github.com/ronycleber" class="black-text" target="_blank" rel="noopener">GitHub: ronycleber</a>
-                            </p>
-                            <p>
-                                <i class="material-icons">email</i> <a href="mailto:ronycleber_pm@hotmail.com?Subject=Contato%20High%20Performance" class="black-text">ronycleber_pm@hotmail.com</a>
-                            </p>
-                        </div>
-                        <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">Rony Cleber
-                                <i class="material-icons right">close</i>
-                            </span>
-                            <p>Mais informações.</p>
-                            <p>
-                                <i class="material-icons">perm_identity</i>Scrum Master</p>
-                            <p>
-                                <i class="material-icons">code</i><a href="https://github.com/ronycleber" class="black-text" target="_blank" rel="noopener">GitHub: ronycleber</a></p>
-                            <p>
-                                <i class="material-icons">email</i> <a href="mailto:ronycleber_pm@hotmail.com?Subject=Contato%20High%20Performance" class="black-text">ronycleber_pm@hotmail.com</a></p>
-                            <p>
-                            </p>
-                            <p>
-                                <i class="material-icons">airplanemode_active</i> Brasil
-                            </p>
-                            <p>
-                            </p>
-                        </div>
-                    </div>
-                </div>
+                    <% } %>
 
             </div>
         </div>
@@ -302,11 +188,14 @@
         </div>
 
 
+
+
+
         <div class="container" id="form">
             <div class="col s12 m12 l6">
                 <div>
                     <div class="row">
-                        <form class="col s12" id="formValidate" method="POST" action="">
+                        <form action="/sobre" id="formValidate" class="col s12" method="POST">
                             <div class="row">
                                 <div class="input-field col s12">
                                     <i class="material-icons prefix">account_circle</i>
@@ -352,7 +241,6 @@
                                 </div>
                             </div>
                     </div>
-
                     </form>
                 </div>
             </div>
@@ -374,14 +262,14 @@
                 </div>
                 <div class="col l4 offset-l2 s12">
                     <ul>
-                        <li><a class="white-text text-lighten-3" href="/">Home</a></li>
-                        <li><a class="white-text text-lighten-3" href="/sobre">Sobre</a></li>
-                        <li><a class="white-text text-lighten-3" href="/login" aria-label="Entrar">Entrar</li>
-                        <li><a class="white-text text-lighten-3" href="/cadastro">Registrar</a></li>
+                        <li><a class="white-text text-lighten-3" href="../../index.html">Home</a></li>
+                        <li><a class="white-text text-lighten-3" href="#">Sobre</a></li>
+                        <li><a class="white-text text-lighten-3" href="../entrar/login.html" aria-label="Entrar">Entrar</li>
+                        <li><a class="white-text text-lighten-3" href="../cadastro/cadastro.html">Registrar</a></li>
                     </ul>
                 </div>
                 <div class="col l1 s4 right">
-                    <a href="#top" class="glyphicon glyphicon-chevron-up  tooltipped" data-position="left" data-tooltip="Voltar ao topo!"><img src="/img/up.png" alt="Voltar ao topo"></a>
+                    <a href="#top" class="glyphicon glyphicon-chevron-up  tooltipped" data-position="left" data-tooltip="Voltar ao topo!"><img src="../../img/up.png" alt="Voltar ao topo"></a>
                 </div>
             </div>
         </div>
@@ -401,17 +289,6 @@
     <script src="/js/main.js"></script>
     <script src="/js/topo.js"></script>
     <script src="/js/loader.js"></script>
-    <script>
-        $(document).ready(function() {
-            $('input#input_text, textarea#textarea2').characterCounter();
-        });
-    </script>
-
-    <!-- Validar form -->
-    <script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.15.0/jquery.validate.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.1/dist/additional-methods.min.js"></script>
-    <script src="/js/messages_pt_BR.js"></script>
-    <script src="/js/formSobre.js"></script>
 </body>
 
 </html>
